@@ -105,7 +105,7 @@ public class DataSourceResourceTest {
     assertThat(entity.getList()).isNotNull();
     assertThat(entity.getList().isEmpty()).isFalse();
 
-    final StatusApi statusApi = entity.getList().get(0);
+    final StatusApi statusApi = entity.getList().getFirst();
     assertThat(statusApi.getCode()).isEqualTo(ThirdEyeStatus.ERR_DATASOURCE_VALIDATION_FAILED);
   }
 
